# Koopman-Scaling

./: .gitignore  README.md
utility/kinova_lcm/drake_cfs_lib/: CMakeLists.txt  main.cpp
utility/kinova_lcm/drake_cfs_lib/LCM/: joint_pos_command.lcm
utility/kinova_lcm/drake_cfs_lib/LCM/exlcm/: kinova_interface.hpp
utility/kinova_lcm/drake_cfs_lib/include/KinematicTrajetcoryOptimization/: KinematicTrajOpt.h
utility/kinova_lcm/drake_cfs_lib/include/RobotVisualizer/: RobotVisualizer.h
utility/kinova_lcm/drake_cfs_lib/script/environment_description/: GEN3_URDF_V12.urdf  environment.urdf  environment_backup.urdf  gp12_motoman.urdf  gp7_motoman.urdf  modified_robot.urdf  robot_environment.dmd.yaml  updated_robot.urdf  urdf_paser_with_UI.py
utility/kinova_lcm/drake_cfs_lib/script/environment_description/environment/: environment_BaggingMachine_vis_1.dae  environment_BaggingMachine_vis_1.stl  environment_Box_vis_1.dae  environment_Box_vis_1.stl  environment_Floor_vis_1.dae  environment_Floor_vis_1.stl  environment_Floor_vis_2.dae  environment_Floor_vis_2.stl  environment_Table_vis_1.stl
utility/kinova_lcm/drake_cfs_lib/script/environment_description/gen3/7dof/meshes/: test.py
utility/kinova_lcm/drake_cfs_lib/script/environment_description/gp12/meshes/visual/: suction_gripper.stl
utility/kinova_lcm/drake_cfs_lib/script/environment_description/gp7/meshes/collision/: RG2_V2_Gripper.stl
utility/kinova_lcm/drake_cfs_lib/src/KinematicTrajetcoryOptimization/: KinematicTrajOpt.cpp
utility/kinova_lcm/drake_cfs_lib/src/RobotVisualizer/: RobotVisualizer.cpp
(+89 files in other folders)
